--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ body {
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.1);
   position: relative;
   background-image: linear-gradient(-85deg, var(--fill-bg), var(--text-col));
+  position: relative;
 }
 
 .form-container {
@@ -143,19 +144,22 @@ input {
   right: 0;
   overflow: hidden;
   transition: ease-out 0.5s;
+  border: 3px solid blue;
 }
 
 .overlay-panel {
-  position: absolute;
+  position: relative;
   height: 100%;
   width: 200%;
   left: -100%;
+  transition: ease-out 0.5s;
+  border: 3px solid yellow;
 }
 
 .panel-left {
   position: absolute;
   top: 0;
-  left: -15%;
+  left: -20%;
   width: 50%;
   height: 100%;
   display: flex;
@@ -164,6 +168,7 @@ input {
   align-items: center;
   padding-top: 80px;
   color: var(--second-col);
+  transition: ease-out 0.5s;
 }
 
 .panel-right {
@@ -178,6 +183,7 @@ input {
   align-items: center;
   padding-top: 80px;
   color: var(--second-col);
+  transition: ease-out 0.5s;
 }
 
 .panel-btn {
@@ -193,8 +199,6 @@ input {
   color: white;
   outline: none;
 }
-
-//animation
 
 .wrapper.active-panel .sign-in {
   opacity: 0;
@@ -215,5 +219,13 @@ input {
 }
 
 .wrapper.active-panel .overlay-panel {
-  transform: translateX(150%);
+  transform: translateX(50%);
+}
+
+.wrapper.active-panel .panel-left {
+  transform: translateX(40%);
+}
+
+.wrapper.active-panel .panel-right {
+  transform: translateX(120%);
 }
